--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.17.3/antd.min.css">
     <link href="/css/site.css" rel="stylesheet" type="text/css">
     <link href="/css/timetable.css" rel="stylesheet" type="text/css">
   </head>
