Added custom theming

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.17.3/antd.min.css">
     <link href="/css/site.css" rel="stylesheet" type="text/css">
     <link href="/css/timetable.css" rel="stylesheet" type="text/css">
+    <link href="/css/timetable-theme1.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app">
